promo text align fix

--- a/css/main.css
+++ b/css/main.css
@@ -614,10 +614,13 @@ h2 {
       margin-top: 0; } }
 
 .promo .bg-primary {
-  text-align: left;
+  text-align: center;
   padding-left: 7%;
   padding-top: 7.5em;
   padding-bottom: 7.5em; }
+  @media (min-width: 725px) {
+    .promo .bg-primary {
+      text-align: left; } }
 
 .promo .img-box {
   background: url(../img/phone-in-hand.jpg);
