--- a/sass/layout/_home-promo.sass
+++ b/sass/layout/_home-promo.sass
@@ -2,10 +2,13 @@
 
 .promo
   .bg-primary
-    text-align: left
+    text-align: center
     padding-left: 7%
     padding-top: 7.5em
     padding-bottom: 7.5em
+    
+    @media(min-width:725px)
+      text-align: left
 
   .img-box
     background: url(../img/phone-in-hand.jpg) // * 1 *
